--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </p>
           <p>Свяжитесь с нами</p>
           <div>
-            <a href="#"
+            <a href="https://ok.ru/"
               ><button class="btn">
                 <div class="btn-content">
                   <img
@@ -86,7 +86,7 @@
                 </div>
               </button></a
             >
-            <a href="#"
+            <a href="https://www.instagram.com/"
               ><button class="btn">
                 <div class="btn-content">
                   <img
@@ -96,7 +96,7 @@
                 </div>
               </button></a
             >
-            <a href="#"
+            <a href="https://vk.com/"
               ><button class="btn">
                 <div class="btn-content">
                   <img
